# morphoview

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: publish.yml
examples/: sample.swc
src/morphoview/: __init__.py  cli.py  graph.py  swc.py  transform.py
src/morphoview/backends/: __init__.py  vispy.py  vtk.py
src/neuronview/: __init__.py  cli.py  colors.py  graph.py  swc.py  transform.py
src/neuronview/backends/: __init__.py  movie.py  mpl.py  vispy.py  vtk.py
tests/: conftest.py  test_colors.py  test_graph.py  test_mpl.py  test_swc.py
