[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morphoview"
version = "0.1.0"
description = "Read, analyze and visualize neuronal morphologies in SWC format."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Subhasis Ray" },
]
keywords = ["neuroscience", "morphology", "SWC", "visualization", "neuron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.20",
    "networkx>=3.0",
]

[project.optional-dependencies]
mpl = ["matplotlib>=3.4"]
vtk = ["vtk>=9.0"]
vispy = ["vispy>=0.11"]
all = ["matplotlib>=3.4", "vtk>=9.0", "vispy>=0.11"]
dev = ["pytest>=7.0", "matplotlib>=3.4", "vtk>=9.0"]

[project.scripts]
morphoview = "morphoview.cli:main"

[project.urls]
Homepage = "https://github.com/subhacom/neuronview"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
morphoview = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
